Fix Typo and improve Wording

--- a/300081001.md
+++ b/300081001.md
@@ -62,7 +62,7 @@ A Booking-System is implemented in the [Dings-System](300000007.md), where the S
 
 For Example Service-Providers can document there in Advance at which Time a Service is Provided in which Area and the Service-Consumers can then book fitting Time/Space-Slots.
 
-All together wll lead to better Rescource-Utilization and Cost-Reduction.
+All Measures together will lead to better Rescource-Utilization and Cost-Reduction.
 
 ### Environment <a id="4030"/>
 
