--- a/300081001.md
+++ b/300081001.md
@@ -26,7 +26,7 @@ We provide [Flying-Services](404.md), where the Production-Resources are mobile:
 - Motor-Bikes
 - Bicycles
 
-One single Resource can also be used for multiple Use-Cases, e.g. a Hotor-Home can be equipped with a Wash-Basin for Hair-Styling or a Table for Massage. Humasn, who own Resources can rent them to other Service-Providers, when the Means-of-Production are currently not utilized, e.g. when a Caravan is not used for Vacation.
+One single Resource can also be used for multiple Use-Cases, e.g. a Motor-Home can be equipped with a Wash-Basin for Hair-Styling or a Table for Massage. Humasn, who own Resources can rent them to other Service-Providers, when the Means-of-Production are currently not utilized, e.g. when a Caravan is not used for Vacation.
 
 The [Communities](140000034.md) should provide Services, which can be rented by the Service-Providers for the Service-Time, for Example:
 
