--- a/260010003.md
+++ b/260010003.md
@@ -1,3 +1,34 @@
-# Fringilla-Coelebs
+# Fringilla-Coelebs <a id="1"/>
 
-A Fringilla-Coelebs is ...
+I am a [Bird](260010000.md).
+
+## Pictures <a id="1000"/>
+
+![Chaffinch in Zöschingen](400000246.jpg)
+
+## Sounds <a id="5000"/>
+
+![Chaffinch around Zöschingen](400000247.mp3)
+
+## About <a id="2000"/>
+
+## Description <a id="3000"/>
+
+### Appearance <a id="3010"/>
+
+The [Common-Chaffinch](260010003.md) may be recognized by its carmine-red Coloration of its Breast and Cheeks, its greyish-blue Head and white-edged Wing-Bars. With Females, the red and greyish-blue Coloration is replaced by a brown one, however the edged Wing-Bars" also exist.
+
+### Call <a id="3010"/>
+
+Its Song is a high warbling. With Males, the first Part of the Song is inherent, the other Part the juvenile Chaffinch takes over from other Males in its Region so that regional Dialects occur. Its Song may be memorized by Paraphrases like: “We, we, we like a bit of Bread and Cheese”.
+
+The Chaffinch´s Call sounds like: “Vink”. Besides, there is its rain call: “Vreeed”.
+
+### Valuable Information <a id="3020"/>
+
+Chaffinchs live in Forests and Woods of all Sorts, Avenues, Meadows with Fruit-Trees, Gardens, Parks. Females migrate in Winter, Males move in Groups, often in Company with Bramblings and may be observed at Bird-Boxes.
+
+## Links <a id="4000"/>
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Eurasian_chaffinch)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q25383)
