--- a/260010003.md
+++ b/260010003.md
@@ -16,7 +16,7 @@ I am a [Bird](260010000.md).
 
 ### Appearance <a id="3010"/>
 
-The [Common-Chaffinch](260010003.md) may be recognized by its carmine-red Coloration of its Breast and Cheeks, its greyish-blue Head and white-edged Wing-Bars. With Females, the red and greyish-blue Coloration is replaced by a brown one, however the edged Wing-Bars" also exist.
+The [Common-Chaffinch](260010003.md) may be recognized by its carmine-red Coloration of its Breast and Cheeks, its greyish-blue Head and white-edged Wing-Bars. With Females, the red and greyish-blue Coloration is replaced by a brown one, however the edged Wing-Bars also exist.
 
 ### Call <a id="3010"/>
 
