--- a/1971091103.md
+++ b/1971091103.md
@@ -1,6 +1,6 @@
 # Bird-Quiz-App
 
-I am an [App](9000168.md) from [Michael_Holzheu](0.md) that provides a [Quiz](280000010.md) about [Birds](260010000.md).
+I am an [App](9000168.md) from [Michael_Holzheu](0.md) and [Georg_Holzheu](1945040100.md), that provides a [Quiz](280000010.md) about [Birds](260010000.md).
 
 ## Links
 
