--- a/260010003.md
+++ b/260010003.md
@@ -22,7 +22,7 @@ The [Common-Chaffinch](260010003.md) may be recognized by its carmine-red Colora
 
 Its Song is a high warbling. With Males, the first Part of the Song is inherent, the other Part the juvenile Chaffinch takes over from other Males in its Region so that regional Dialects occur. Its Song may be memorized by Paraphrases like: “We, we, we like a bit of Bread and Cheese”.
 
-The Chaffinch´s Call sounds like: “Vink”. Besides, there is its rain call: “Vreeed”.
+The Chaffinch´s Call sounds like: “Vink”. Besides, there is its Rain-Call: “Vreeed”.
 
 ### Valuable Information <a id="3020"/>
 
