--- a/260010000.md
+++ b/260010000.md
@@ -1,3 +1,8 @@
 # Bird
 
-A Bird is ...
+I am a [Biologic-Class](40000086.md).
+
+## Links
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Bird)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q5113)
