Add Reference and improve Wording

--- a/300081001.md
+++ b/300081001.md
@@ -8,7 +8,7 @@ Git-Version and History: <a href="https://github.com/All-Dings/0/commits/Master/
 
 ## Problem-Statement <a id="1000"/>
 
-In order to provide Services, both the [Consumer](600076.md) and the [Provider](600086.md) have to come together in [Time](10000024.md) and [Space](10000050.md). Currently most of the Time the Consumer has to travel to the Provider, which has serveral Drawbacks:
+In order to provide [Services](600067.md), both the [Consumer](600076.md) and the [Provider](600086.md) have to come together in [Time](10000024.md) and [Space](10000050.md). Currently most of the Time the Consumer has to travel to the Provider, which has serveral Drawbacks:
 
 - There are Consumers with limited Mobility, e.g. due to the Demographic-Factor there are more older People.
 - Providing Production-Resources, e.g. Real-Estate or Equipment for the Services is associated with high Costs.
@@ -58,7 +58,7 @@ The proposed Concept can be applied to multiple Areas, where in the Following so
 
 ### Resources <a id="4010"/>
 
-A Booking-System is implemented in the [Dings-System](300000007.md), where the Service-Providers and Consumers can come together in the [Space-Time-Continuum](10000027.md)
+A Booking-System is implemented in the [Dings-System](300000007.md), where the Service-Providers and Consumers can find together in the [Space-Time-Continuum](10000027.md)
 
 For Example Service-Providers can document there in Advance at which Time a Service is Provided in which Area and the Service-Consumers can then book fitting Time/Space-Slots.
 
