--- a/91000017.md
+++ b/91000017.md
@@ -5,4 +5,4 @@ I am a [Song](90000011.md).
 ## About
 
 - My [Composer](90000012.md) is [Bernhard_Mohl](70000106.md).
-- My [Texter](404.md) is [Monika_Hunze](70000105.md).
+- My [Lyricist](90000066.md) is [Monika_Hunze](70000105.md).
