--- a/1971100004.md
+++ b/1971100004.md
@@ -5,3 +5,9 @@ I am a [Movie-From-Michael](1111.md).
 ## About
 
 - My [Source](600130.md) is [Meine-Heimat-ist-das-Netz](91000017.md).
+
+## Usage-Rights
+
+- E-Mail [Monika](70000105.md)-To-[Michael](0.md), Bct-2023.12.04-12:45
+- E-Mail [Bernhard](70000106.md)-To-[Michael](0.md), Bct-2023.12.05-21:48
+- E-Mail [Bernhard](70000106.md)-To-[Michael](0.md), Bct-2024.06.05-21:49
