--- a/70000106.md
+++ b/70000106.md
@@ -4,5 +4,5 @@ I am a [Human](40000001.md).
 
 ## Links
 
-- Website: [bernhardmohl.de](bernhardmohl.de)
+- Website: [bernhardmohl.de](https://bernhardmohl.de)
 - YouTube: [https://youtube.com](https://youtube.com/user/DerGedichtegeiger)
