--- a/30010025.md
+++ b/30010025.md
@@ -4,7 +4,7 @@ I am a [Media-Format](30010000.md)
 
 ## About
 
-- I am a [Contaienr](600063.md) for [Subtitles](404.md).
+- I am a [Container](600063.md) for [Subtitles](700069.md).
 
 ## Links
 
