--- a/1971100004.md
+++ b/1971100004.md
@@ -6,13 +6,4 @@ I am a [Movie-From-Michael](1111.md).
 
 ## Parts-List
 
-- [Song](90000011.md): [Meine-Heimat-ist-das-Netz](91000017.md)
-- [Photo](50000001.md): [Meer-Stadt-Nacht-Ozean](400000248.md)
-
-## Usage-Rights
-
-- E-Mail [Monika](70000105.md)-To-[Michael](0.md), Bct-2024.06.08-00:05
-- E-Mail [Bernhard](70000106.md)-To-[Michael](0.md), Bct-2024.06.05-21:49
-- E-Mail [Ernst-Bloch-Chor](2010013.md)-To-[Michael](0.md), Bct-2024.06.04-09:09
-- E-Mail [Bernhard](70000106.md)-To-[Michael](0.md), Bct-2023.12.05-21:48
-- E-Mail [Monika](70000105.md)-To-[Michael](0.md), Bct-2023.12.04-12:45
+- Video: [Manchmal-Besser-Manuell-German](400000249.md)
