--- a/1971091180.md
+++ b/1971091180.md
@@ -1,3 +1,7 @@
 # Jay
 
 I am a [Human](40000001.md).
+
+## Links
+
+- LinkedIn: [Https://LinkedIn.Com](https://linkedin.com/in/janmajay-kumar-82b37121)
