--- a/91000018.md
+++ b/91000018.md
@@ -4,5 +4,5 @@ I am a [Choral-Work](91001006.md).
 
 ## About
 
-- My [Composer](90000012.md) is [Morten_Lauridsen](404.md).
-- My [Lyricist](90000066.md) is [James_Agee](404.md).
+- My [Composer](90000012.md) is [Morten_Lauridsen](70000112.md).
+- My [Lyricist](90000066.md) is [James_Agee](70000113.md).
