--- a/60100004.md
+++ b/60100004.md
@@ -1,3 +1,8 @@
 # Internationales-Congress-Centrum-Berlin
 
 I am a [Building](60100002.md) in [Berlin](140000049.md).
+
+## Links
+
+- Wikipedis: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Internationales_Congress_Centrum_Berlin)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q820164)
