--- a/9200006.md
+++ b/9200006.md
@@ -4,5 +4,5 @@ I am a [File-Format](9000193.md )
 
 ## Links
 
-- Wikipedia: [Https://Ee.WikiPedia.Org](https://en.wikipedia.org/wiki/Robots.txt)
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Robots.txt)
 - Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q80776)
