--- a/199000008.md
+++ b/199000008.md
@@ -1,3 +1,8 @@
 # Technik-Museum-Berlin
 
 I am a [Museum](199000005.md) in [Berlin](140000049.md).
+
+## Links
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/German_Museum_of_Technology)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q706530)
