Add Definition and Links

--- a/9400005.md
+++ b/9400005.md
@@ -1,3 +1,8 @@
 # Instruction-Pipelining
 
-Instruction-Pipelining is ...
+I am a [Concept](600011.md) for [Parallelism](10000103.md).
+
+## Links
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Instruction_pipelining)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q2490641)
