--- a/70000114.md
+++ b/70000114.md
@@ -4,4 +4,4 @@ I am a [Human](40000001.md).
 
 ## About
 
-I am a [Curator](404.md) of the [Heinz-Nixdorf-MuseumsForum](199000011.md)
+I am a [Curator](202000029.md) of the [Heinz-Nixdorf-MuseumsForum](199000011.md)
