--- a/199000011.md
+++ b/199000011.md
@@ -1,3 +1,9 @@
 # Heinz-Nixdorf-MuseumsForum
 
 I am a [Computer-Museum](199000010.md).
+
+## Links
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Heinz_Nixdorf_MuseumsForum)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q1600696)
+- Home-Page: [Https://Hnf.De](https://hnf.de/home.html)
