--- a/70000083.md
+++ b/70000083.md
@@ -4,4 +4,5 @@ I am a [Human](40000001.md).
 
 ## Links <a id="2000"/>
 
-- [Wikipedia](190000006.md): [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Herman_Hollerith)
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Herman_Hollerith)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q192145)
