--- a/240000037.md
+++ b/240000037.md
@@ -4,4 +4,5 @@ I am a [Corporation](240000000.md) from [USA](141000004.md).
 
 ## Links
 
-- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/IBM)
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/IBM)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q37156)
