--- a/70000053.md
+++ b/70000053.md
@@ -4,4 +4,5 @@ I am a [Human](40000001.md).
 
 ## Links
 
-- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Heinz_Nixdorf)
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Heinz_Nixdorf)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q67464)
