--- a/1971100005.md
+++ b/1971100005.md
@@ -1,3 +1,11 @@
 # Charles-Babbage's-Analytical-Engine-Extended
 
 I am a [Movie-From-Michael](1111.md).
+
+## Description
+
+As early as the 1840s, the Englishman Charles Babbage designed a Machine that already had almost all the Key-Elements of Today's Computer-Systems. He was incredible 100 Years ahead of his Time.
+
+Unfortunately, the Analytical-Engine has remained an intellectual Construct to this Day and could never be built.
+
+In this Film, the History of this theoretical Machine is illuminated and then its Operation is described in Detail. Finally, the ambitious "Plan 28" is reported, where our English Colleagues try to create the Analytical-Engine according to the Records of Charles_Babbage until its 200th Birthday.
