--- a/70000060.md
+++ b/70000060.md
@@ -4,4 +4,5 @@ I am a [Human](40000001.md).
 
 ## Links
 
-- Wikipedia: [https://en.wikipedia.org](https://en.wikipedia.org/wiki/Howard_H._Aiken)
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Howard_H._Aiken)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q299723)
