--- a/201000017.md
+++ b/201000017.md
@@ -1,3 +1,8 @@
 # Mark-I
 
 I am a [Computer](20000003.md).
+
+## Links
+
+- [Wikipedia](https://en.wikipedia.org/wiki/Harvard_Mark_I)
+- [Wikidata](https://wikidata.org/wiki/Q776823)
