--- a/201000017.md
+++ b/201000017.md
@@ -2,6 +2,10 @@
 
 I am a [Computer](20000003.md).
 
+## About
+
+- My [Creator](600098.md) is [Howard_Aiken](70000060.md)
+
 ## Links
 
 - [Wikipedia](https://en.wikipedia.org/wiki/Harvard_Mark_I)
