--- a/201000012.md
+++ b/201000012.md
@@ -1,3 +1,8 @@
 # Analytical-Engine
 
 I am a hypothetical [Computer](20000003.md) from [James_Babbage](70000054.md).
+
+## Links
+
+- Wikipedia: [Https://En.WikiPedia.Org](https://en.wikipedia.org/wiki/Analytical_engine)
+- Wikidata: [Https://WikiData.Org](https://wikidata.org/wiki/Q485257)
