--- a/1971100005.md
+++ b/1971100005.md
@@ -10,4 +10,4 @@ As early as the 1840s, the Englishman [Charles_Babbage](1971100005.md) designed 
 
 Unfortunately, the [Analytical-Engine](201000012.md) has remained an intellectual Construct to this Day and could never be built.
 
-In this Film, the History of this theoretical Machine is illuminated and then its Operation is described in Detail. Finally, the ambitious [Plan-28]() is reported, where our English Colleagues try to create the Analytical-Engine according to the Records of Charles_Babbage until its 200th Birthday.
+In this Film, the History of this theoretical Machine is illuminated and then its Operation is described in Detail. Finally, the ambitious [Plan-28](306000000.md) is reported, where our English Colleagues try to create the Analytical-Engine according to the Records of [Charles_Babbage](1971100005.md) until its 200th Birthday.
