--- a/1971091184.md
+++ b/1971091184.md
@@ -4,7 +4,7 @@ I am a [Human](40000001.md).
 
 ## About
 
-- I am [Expert](12000000.md) for [Thomas_Mann](404.md).
+- I am [Expert](12000000.md) for [Thomas_Mann](70000117.md).
 - I am [Expert](12000000.md) for [Konrad_Zuse](70000045.md).
 - I am an [Employee](270000032.md) of [Günther_Mußtopf](70000097.md).
 - I am an [Owner](670045.md) of [Dölling-und-Galitz-Verlag](240000047.md).
