--- a/240000050.md
+++ b/240000050.md
@@ -1,6 +1,6 @@
 # Nilfisk
 
-I am a [Corporation](240000000.md) from [Denmark](404.md).
+I am a [Corporation](240000000.md) from [Denmark](150000096.md).
 
 ## Links
 
