--- a/1971100006.md
+++ b/1971100006.md
@@ -6,4 +6,4 @@ I am a [Movie-From-Michael](1111.md).
 
 ## Description
 
-A Movie with [Johny-Cash](70000118.md) about the [Nordschleife](404.md) of the [Nürburgring](404.md).
+A Movie with [Johny-Cash](70000118.md) about the [Nordschleife](270220003.md) of the [Nürburgring](270220002.md).
