--- a/1971100006.md
+++ b/1971100006.md
@@ -8,4 +8,4 @@ I am a [Movie-From-Michael](1111.md).
 
 ## Description
 
-A Movie with [Johny-Cash](70000118.md) about the [Nordschleife](270220003.md) of the [Nürburgring](270220002.md).
+A Movie with [Johnny-Cash](70000118.md) about the [Nordschleife](270220003.md) of the [Nürburgring](270220002.md).
