--- a/240000053.md
+++ b/240000053.md
@@ -9,7 +9,7 @@ I am a [Corporation](240000000.md) from [Nerdlen](140000099.md).
 
 ## Photos
 
-![Som Advertising](400000258.jpg)
+![Some Advertising](400000258.jpg)
 
 ## Links
 
