--- a/1971100006.md
+++ b/1971100006.md
@@ -4,7 +4,7 @@ I am a [Movie-From-Michael](1111.md).
 
 ## Content
 
-Not jet published, stay tuned ...
+Not yet published, stay tuned ...
 
 ## Description
 
