--- a/1971100006.md
+++ b/1971100006.md
@@ -8,6 +8,10 @@ I am a [Movie-From-Michael](1111.md).
 
 A Movie with [Johnny-Cash](70000118.md) about the [Nordschleife](270220003.md) of the [Nürburgring](270220002.md).
 
+## About
+
+- My [Photo](50000001.md) is [Johnny-and-Michael-in-Suzuki-Swift](400000265.md).
+
 ## Parts-List  <a id="2000"/>
 
 - Video: [Nürburgring-Nordschleife-Movie-Mp4](400000259.md)
