--- a/130100010.md
+++ b/130100010.md
@@ -1,6 +1,6 @@
 # Schlaube
 
-I am a [River](130100005.md) in [Brandenburg](404.md).
+I am a [River](130100005.md) in [Brandenburg](140000100.md).
 
 ## Links
 
